# claude-voice-assistant

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
docs/: smoke-test.md  windows-setup.md
docs/plans/: 2026-05-17-voice-assistant-design.md  2026-05-17-voice-assistant-plan.md
docs/spikes/: spike-a-windows-audio.md  spike-b-cuda-windows.md  spike-c-claude-print.md  spike-d-claude-stream.md
host/: __init__.py
host/audio/: capture.py  vad.py
host/orchestrator/: cli.py  clients.py  hotkey.py  runner.py  state.py  trigger.py
host/stt/: cli.py  server.py
host/tts/: cli.py  queue.py  server.py
scripts/: claude-voice-daemon.service  dev.sh  install-host.ps1  install-vm-systemd.sh  install-vm.sh  run-host.ps1  spike-c-claude-print.sh  spike-d-claude-stream.py  verify-host.ps1  voice-daemon.env.example
tests/host/audio/: test_capture.py  test_vad.py
tests/host/orchestrator/: test_hotkey.py  test_runner.py  test_state.py
tests/host/stt/: test_server.py
tests/host/tts/: test_queue.py  test_server.py
tests/vm/claude_daemon/: test_bootstrap.py  test_process.py  test_server.py  test_session.py
tests/vm/speak/: test_cli.py
vm/: __init__.py
vm/claude_daemon/: cli.py  process.py  server.py  session.py
vm/speak/: cli.py
vm/workspace_template/: CLAUDE.md
vm/workspace_template/.claude/: settings.json
