[project]
name = "claude-voice-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "sounddevice>=0.5",
  "numpy>=2.0",
  "soundfile>=0.12",
  "pynput>=1.7",
  "faster-whisper>=1.0",
  "kokoro-onnx>=0.5",          # 0.5.x is the version verified in Spike B (CPU path)
  "onnxruntime>=1.20",         # CPU ORT only — Spike B chose CPU for TTS
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "respx>=0.21"]
# Windows-host extras (CUDA DLLs for faster-whisper STT). Install on the
# Windows host venv only: `uv pip install -e '.[host-cuda]'`.
# nvidia-cuda-runtime-cu12 is pulled transitively per Spike B.
host-cuda = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]

[project.scripts]
voice-orchestrator = "host.orchestrator.cli:main"
voice-stt = "host.stt.server:main"
voice-tts = "host.tts.server:main"
voice-claude-daemon = "vm.claude_daemon.server:main"
speak = "vm.speak.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["host", "vm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
